# an-editor

./: .travis.yml  Cargo.toml  README.md
src/: buffer.rs  cursor.rs  history.rs  main.rs
