[package]
name = "an-editor"
description = "an text editor."
version = "0.0.1"
authors = [ "Eliza Weisman <hi@hawkweisman.me>"
          , "Chris McDonald <mail.chris.mcdonald@gmail.com>"
          , "Rachel McLaughlin <rleighmac@gmail.com>"]
repository = "https://github.com/an-cabal/an-editor"
homepage = "https://github.com/an-cabal/an-editor"
readme = "README.md"
license = "MIT"

[[bin]]
name = "an"

[features]
default = ["cli"]
# if building against unstable Rust
unstable = ["an-rope/unstable"]
# build the command-line interface
cli = ["clap", "termion"]

[dependencies.clap]
version = "~2.20.0"
optional = true

[dependencies.termion]
version = "1.0"
optional = true

[dependencies.an-rope]
version = "0.3.1"

[dependencies.clippy]
version = "*"
optional = true

[dependencies.an-zipper]
git = "https://github.com/an-cabal/an-zipper.git"
